--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -14,6 +14,10 @@ server:
   port: 9092
 
 feign:
+  client:
+    config:
+      nacos-provider:
+        loggerLevel: full
   sentinel:
     enabled: true
 
@@ -22,3 +26,8 @@ management:
     web:
       exposure:
         include: "*"
+
+
+logging:
+  level:
+    com.sean.feign.service.EchoService: debug
