增加feigh全局日志配置

--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -16,7 +16,10 @@ server:
 feign:
   client:
     config:
-      nacos-provider:
+#      nacos-provider:
+#        loggerLevel: full
+      # 全局配置
+      default:
         loggerLevel: full
   sentinel:
     enabled: true
