增加原生rocketmq配置

--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -34,3 +34,10 @@ management:
 logging:
   level:
     com.sean.feign.service.EchoService: debug
+
+
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    # 必须指定group
+    group: test-group
