--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>rocketmq-spring-boot-starter</artifactId>
             <version>2.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Spring Boot End -->
 
         <!-- Spring Cloud Begin -->
